SHOR-152: Fix regression with notifications z-indexes

--- a/scss/civicrm/common/_block-shadows.scss
+++ b/scss/civicrm/common/_block-shadows.scss
@@ -59,7 +59,7 @@
 #crm-main-content-wrapper,
 #crm-container {
   position: relative;
-  z-index: 0;
+  z-index: 1;
 }
 
 @include block-shadows-for-h3-crm-form-block-pair();
